# fast-lttb

./: CMakeLists.txt  lttb.cpp  lttb.hpp  test.cpp  visualize.py
lib/: tracy
